--- a/Aldu.ioc
+++ b/Aldu.ioc
@@ -22,10 +22,11 @@ Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=I2C1_RX
 Dma.Request1=I2C1_TX
 Dma.Request2=SPI2_TX
-Dma.Request3=USART6_TX
-Dma.Request4=USART1_RX
-Dma.Request5=USART1_TX
-Dma.RequestsNb=6
+Dma.Request3=SPI3_TX
+Dma.Request4=USART6_TX
+Dma.Request5=USART1_RX
+Dma.Request6=USART1_TX
+Dma.RequestsNb=7
 Dma.SPI2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_TX.2.Instance=DMA1_Stream4
@@ -36,36 +37,46 @@ Dma.SPI2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI2_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI2_TX.2.Priority=DMA_PRIORITY_LOW
 Dma.SPI2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.4.Instance=DMA2_Stream2
-Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.4.Mode=DMA_NORMAL
-Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART1_TX.5.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.5.Instance=DMA2_Stream7
-Dma.USART1_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.5.Mode=DMA_NORMAL
-Dma.USART1_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.5.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART6_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_TX.3.Instance=DMA2_Stream6
-Dma.USART6_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART6_TX.3.Mode=DMA_NORMAL
-Dma.USART6_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART6_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI3_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_TX.3.Instance=DMA1_Stream5
+Dma.SPI3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI3_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_TX.3.Mode=DMA_NORMAL
+Dma.SPI3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI3_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.5.Instance=DMA2_Stream2
+Dma.USART1_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.5.Mode=DMA_NORMAL
+Dma.USART1_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.6.Instance=DMA2_Stream7
+Dma.USART1_TX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.6.Mode=DMA_NORMAL
+Dma.USART1_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.6.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.4.Instance=DMA2_Stream6
+Dma.USART6_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.4.Mode=DMA_NORMAL
+Dma.USART6_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F2
@@ -128,6 +139,7 @@ MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -217,54 +229,56 @@ PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 RCC.48MHZClocksFreq_Value=48000000
-RCC.AHBFreq_Value=48000000
+RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
+RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=48000000
+RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=16000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=24000000
-RCC.APB2TimFreq_Value=48000000
-RCC.CortexFreq_Value=48000000
-RCC.EthernetFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
+RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=16000000
+RCC.CortexFreq_Value=16000000
+RCC.EthernetFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=12000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=144000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLP,PLLQ,PLLSourceVirtual,RCC_RTC_Clock_Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.I2SClocksFreq_Value=96000000
+RCC.IPParameters=48MHZClocksFreq_Value,AHBCLKDivider,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLP,PLLSourceVirtual,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
-RCC.PLLM=8
+RCC.MCO2PinFreq_Value=32000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLM=12
 RCC.PLLP=RCC_PLLP_DIV6
-RCC.PLLQ=6
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=6000000
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=32000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=288000000
-RCC.VCOInputFreq_Value=1500000
-RCC.VCOOutputFreq_Value=288000000
-RCC.VcooutputI2S=144000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
+RCC.VCOOutputFreq_Value=192000000
+RCC.VcooutputI2S=96000000
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=12.0 MBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI2.CalculateBaudRate=12.0 MBits/s
+SPI2.CalculateBaudRate=4.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+SPI3.CalculateBaudRate=4.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
